refactor + fix tests